--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   multiselect: ^0.0.7
   quickalert:
+  pokeball_widget: ^1.0.0+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
